realizo cambios generales

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <h1>Sobre Mi</h1>
-        <h2>Bienvenido a mi página personal</h2>
+        <h2>Bienvenido a mi página web</h2>
     </header>
     
     <section>
         <h2>Me Presento</h2>
-        <p>Hola, mi nombre es Joseph Samir Mora. Soy un apasionado del desarrollo web y estoy aprendiendo HTML, CSS y Git.</p>
+        <p>Hola, mi nombre es Joseph S. Mora. Soy un apasionado del desarrollo web y estoy aprendiendo HTML, 
+        CSS, JavaScript y Git.</p>
         <img src="img/mi-foto.jpg.jpg" alt="Foto personal" width="200">
     </section>
     
